--- a/PID-simulation/PID-Car/css/style.css
+++ b/PID-simulation/PID-Car/css/style.css
@@ -241,17 +241,14 @@ button {
     display: flex; /* Make this group a flex container */
     flex-wrap: wrap; /* Allow items to wrap to the next line if space is limited */
     gap: 20px; /* Gap between the cards */
-    /* If there's only one card, it will simply take full width within this container */
+    /* No width needed, it will take the width of its parent (.controls) */
 }
 
 .preset-and-help-group > .control-card {
-    /* Since there's only one card now, this style will simply make it take full available width.
-       No need for calc(50% - 10px) as there's no other card to share space with directly. */
+    /* Since there's only one card now, this style will simply make it take full available width. */
     flex: 1 1 100%; /* Make the single card take full width */
     min-width: 250px; /* Ensure a reasonable minimum width */
 }
-
-/* Removed .help-card specific styles as the element is no longer in HTML */
 
 .status-indicator {
   display: inline-block;
